--- a/T0/ContaBanco/ContaBanco.csproj
+++ b/T0/ContaBanco/ContaBanco.csproj
@@ -55,12 +55,21 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmCadastroDeConta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmCadastroDeConta.Designer.cs">
+      <DependentUpon>FrmCadastroDeConta.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SaldoInsuficienteException.cs" />
     <Compile Include="TotalizadorDeContas.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmCadastroDeConta.resx">
+      <DependentUpon>FrmCadastroDeConta.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
