Migration com Erro

--- a/T0/Alura.Loja/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/T0/Alura.Loja/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -171,6 +171,11 @@
   <ItemGroup>
     <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
+    <Compile Include="Migrations\20180726143821_Unidade.cs" />
+    <Compile Include="Migrations\20180726143821_Unidade.designer.cs">
+      <DependentUpon>20180726143821_Unidade.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
     <Compile Include="ProdutoDaoEntity.cs" />
     <Compile Include="Program.cs" />
