--- a/T0/Alura.Loja/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
+++ b/T0/Alura.Loja/Alura.Loja/Alura.Loja.Testes.ConsoleApp/Alura.Loja.Testes.ConsoleApp.csproj
@@ -169,6 +169,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="compra.cs" />
     <Compile Include="IProdutoDAO.cs" />
     <Compile Include="LojaContext.cs" />
     <Compile Include="Migrations\20180726145302_Inicial.cs" />
@@ -178,6 +179,10 @@
     <Compile Include="Migrations\20180726145540_Unidade.cs" />
     <Compile Include="Migrations\20180726145540_Unidade.designer.cs">
       <DependentUpon>20180726145540_Unidade.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\20180727123618_Compra.cs" />
+    <Compile Include="Migrations\20180727123618_Compra.designer.cs">
+      <DependentUpon>20180727123618_Compra.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\LojaContextModelSnapshot.cs" />
     <Compile Include="Produto.cs" />
